[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrimp-farm-cloud-controller"
version = "1.0.0"
description = "Shrimp Farm Cloud Controller API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.1"
]

[tool.nixpacks]
providers = ["python"]
